--- a/trackshift-api/package.json
+++ b/trackshift-api/package.json
@@ -10,9 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "config": "^3.3.8",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.6.4",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.7.0"
   }
 }
