--- a/trackshift-api/package.json
+++ b/trackshift-api/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "config": "^3.3.8",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.6.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.7.0"
+    "mongoose": "^6.7.0",
+    "querystring": "^0.2.1",
+    "request": "^2.88.2",
+    "spotify-web-api-node": "^5.0.2"
   }
 }
