--- a/trackshift/package.json
+++ b/trackshift/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.2",
     "joi": "^17.6.4",
     "jwt-decode": "^3.1.2",
+    "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.2",
