--- a/trackshift-api/package.json
+++ b/trackshift-api/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "googleapis": "^109.0.1",
     "joi": "^17.6.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
