--- a/trackshift/package.json
+++ b/trackshift/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "joi": "^17.6.4",
+    "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "querystring": "^0.2.1",
     "react": "^18.2.0",
