--- a/trackshift-api/package.json
+++ b/trackshift-api/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "googleapis": "^109.0.1",
     "joi": "^17.6.4",
     "jsonwebtoken": "^8.5.1",
@@ -22,6 +23,8 @@
     "mongoose": "^6.7.0",
     "querystring": "^0.2.1",
     "request": "^2.88.2",
-    "spotify-web-api-node": "^5.0.2"
+    "spotify-web-api-node": "^5.0.2",
+    "winston": "^3.8.2",
+    "winston-mongodb": "^5.1.0"
   }
 }
